--- a/tutorial/src/task.Rmd
+++ b/tutorial/src/task.Rmd
@@ -6,29 +6,26 @@ task, e.g., the target variable.
 
 The tasks are organised in a hierarchy, with the generic
 [&Task] at the top.
-The concrete tasks that can be instantiated are [ClassifTask](&Task) for classification,
-[RegrTask](&Task) for regression, [SurvTask](&Task) for survival
-analysis, [CostSensTask](&Task) for
-cost-sensitive classification, and [ClusterTask](&Task) for clustering.
+The following tasks can be instantiated and all inherit from a virtual superclass [&Task]:
 
+* [ClassifTask](&Task) for binary and multi-class classification problems
+* [RegrTask](&Task) for regression problems
+* [SurvTask](&Task) for survival analysis
+* [CostSensTask](&Task) for cost-sensitive classification
+* [ClusterTask](&Task) for cluster analysis
 
-## Creating a learning task
+To create a task, just call ``make[TaskType]``, e.g. [makeClassifTask](&Task).
+All tasks require an identifier (argument ``id``) and a [data frame](&base::data.frame) (argument ``data``).
+If no ID is provided it is automatically generated using the name of the data.
+Depending on the nature if the learning problem, additional arguments may be required and are exemplified in the following subsections.
 
-There are dedicated functions to create these tasks:
-[makeClassifTask](&Task),
-[makeRegrTask](&Task),
-[makeSurvTask](&Task), [makeCostSensTask](&Task), and
-[makeClusterTask](&Task).
-These require the data set and, depending on the 
-nature of the learning problem, further information.
+## Cluster analysis
 
-
-### Cluster analysis
-
-In order to generate a task for a cluster analysis problem ``data`` is the only mandatory argument.
+Because cluster analysis is unsupervised, the only mandatory argument to construct a cluster analysis task is the ``data``.
 In the following example we create a learning task from the data set [mtcars](&datasets::mtcars).
 
 ```{r}
+data(mtcars, package = "datasets")
 cluster.task = makeClusterTask(id = "cars", data = mtcars)
 cluster.task
 ```
@@ -40,7 +37,7 @@ If not specified the ``id`` defaults to the name of the **R** object passed to `
 in the above example ``"mtcars"``.
 
 
-### Regression
+## Regression
 
 For supervised learning like regression (as well as classification and
 survival analysis) we, in addition to ``data``, have to specify the name of the ``target``
@@ -48,7 +45,6 @@ variable.
 
 ```{r}
 data(BostonHousing, package = "mlbench")
-
 regr.task = makeRegrTask(data = BostonHousing, target = "medv")
 regr.task
 ```
@@ -62,7 +58,7 @@ follows the same scheme, except that the target variable is a factor instead of 
 For each of these learning problems, some specifics are described below.
 
 
-### Classification
+## Classification
 
 For classification the target variable has to be a ``factor``.
 
@@ -72,13 +68,12 @@ This is for example relevant with regard to certain [performance measures](perfo
 like the *true positive rate*.
 By default the first factor level of the target variable is selected as the positive class.
 
-In the following example, we define a classification task for the data set 
+In the following example, we define a classification task for the data set
 [BreastCancer](&mlbench::BreastCancer) and exclude the variable ``Id`` from all further
 model fitting and evaluation.
 
 ```{r}
 data(BreastCancer, package = "mlbench")
-
 df = BreastCancer
 df$Id = NULL
 classif.task = makeClassifTask(id = "BreastCancer", data = df, target = "Class")
@@ -94,18 +89,15 @@ classif.task = makeClassifTask(id = "BreastCancer", data = df, target = "Class",
 ```
 
 
-### Survival analysis
+## Survival analysis
 
-For survival analysis ``target`` specifies the names of the survival time and event
-columns in ``data`` and therefore is a character vector of length 2.
-Note that the event column has to be a logical vector.
-For details see the documentation of function [Surv](&survival::Surv).
+Survival tasks use two target columns.
+For left and right censored problems these consist of the survival time and a binary event indicator.
+For interval censored data the two target columns must be specified in the ``"interval2"`` format (see [Surv](&survival::Surv)).
 
 ```{r}
 data(lung, package = "survival")
-## Coerce the event column to a logical vector
-lung$status = lung$status - 1
-
+lung$status = (lung$status == 2) # convert to logical
 surv.task = makeSurvTask(data = lung, target = c("time", "status"))
 surv.task
 ```
@@ -114,9 +106,9 @@ The type of censoring can be specified via the argument ``censoring`` which defa
 ``"rcens"`` for right censored data.
 
 
-### Cost-sensitive classification
+## Cost-sensitive classification
 
-In regular classification, as addressed above, the aim when training a classifier is to 
+In regular classification, as addressed above, the aim when training a classifier is to
 minimize the misclassification rate.
 Thus, it is implicitly assumed that all types of misclassification errors are equally severe.
 In *cost-sensitive classification* the costs of misclassifying an object with true
@@ -131,12 +123,11 @@ If the cost vectors are given, the true values *y* of the target variable not ne
 Naturally, it is assumed that the cost of the true class label *y* is minimal.
 
 Hence, in order to create a cost-sensitive classification task, the feature values *x* and
-a ``cost`` matrix that contains the cost vectors for all examples in the data set are required. 
+a ``cost`` matrix that contains the cost vectors for all examples in the data set are required.
 
+We use the iris data and generate an artificial cost matrix (following [Beygelzimer et al. (2005)](http://dx.doi.org/10.1145/1102351.1102358)):
 
 ```{r}
-## We use the iris data and generate an artificial cost matrix
-## (following Beygelzimer et al. (2005))
 df = iris
 cost = matrix(runif(150 * 3, 0, 2000), 150) * (1 - diag(3))[df$Species,]
 df$Species = NULL
@@ -145,14 +136,10 @@ costsens.task = makeCostSensTask(data = df, cost = cost)
 costsens.task
 ```
 
-Beygelzimer, A., Dani, V., Hayes, T., Langford, J., and Zadrozny, B.
-Error limiting reductions between classification tasks.
-In Machine Learning: Proceedings of the 22rd International Conference, pp. 49–56. ACM, 2005.
-
 For more details see the section about [cost-sensitive classification](cost_sensitive_classif.md).
 
 
-### Further details
+## Further details
 
 The [&Task] help page also lists several other arguments to describe further details of the
 problem.
@@ -239,5 +226,5 @@ df = as.data.frame(d[seq(2,nrow(d),2), c("Item", "Title")])
 df$Item = sapply(df$Item, linkTask)
 names(df)[1] = "Task"
 pandoc.table(df, style = "rmarkdown", split.tables = Inf, split.cells = Inf,
-	justify = c("left", "left"))
+  justify = c("left", "left"))
 ```
