--- a/tutorial/src/cost_sensitive_classif.Rmd
+++ b/tutorial/src/cost_sensitive_classif.Rmd
@@ -371,7 +371,7 @@ performance(pred.th, measures = list(wf.costs, mmce))
 The threshold vector ``th`` in the above example is chosen according to the average costs
 of the true classes 55, 4.5 and 9.
 More exactly, ``th`` corresponds to a cost matrix of the structure mentioned above with off-diagonal
-elements *c*(2,1) = *c*(3,1) = 50, *c*(1,2) = *c*(3,2) = 4.5 and *c*(1,3) = *c*(2,3) = 9.
+elements *c*(2,1) = *c*(3,1) = 55, *c*(1,2) = *c*(3,2) = 4.5 and *c*(1,3) = *c*(2,3) = 9.
 This threshold vector is not optimal but leads to smaller total costs on the data set than
 the default.
 
@@ -479,8 +479,8 @@ the misclassification penalty ([&mcp]).
 The latter measure is the average difference between the costs caused by the predicted
 class labels, i.e., [&meancosts], and the costs resulting from choosing the class with lowest
 cost for each observation.
-In order to compute the misclassification penalty the costs for the test observations are
-required and therefore the [&Task] has to be passed to [&performance].
+In order to compute these measures the costs for the test observations are required and
+therefore the [&Task] has to be passed to [&performance].
 
 
 ```{r}
