--- a/tutorial/src/wrapper.Rmd
+++ b/tutorial/src/wrapper.Rmd
@@ -1,6 +1,6 @@
 # Wrapper
 
-Wrappers can be employed to extend integrated [learners](&Learner) with new functionality.
+Wrappers can be employed to extend integrated [learners](&makeLearner) with new functionality.
 The broad scope of operations and methods which are implemented as wrappers underline the flexibility of the wrapping approach:
 
 * [Data preprocessing](preproc.md)
@@ -13,14 +13,14 @@ The broad scope of operations and methods which are implemented as wrappers unde
 * [Multiclass extension](&makeMulticlassWrapper) for binary-class learners
 
 All these operations and methods have a few things in common:
-First, they all wrap around [&mlr] [learners](&Learner) and they return a new learner.
+First, they all wrap around [&mlr] [learners](&makeLearner) and they return a new learner.
 Therefore learners can be wrapped multiple times.
 Second, they are implemented using a *train* (pre-model hook) and *predict* (post-model hook) method.
 
 ## Example: Bagging wrapper
 
 In this section we exemplary describe the bagging wrapper to create a random forest which supports weights.
-To archive that we combine several decision trees from the [%rpart] package to create our own custom random forest.
+To achieve that we combine several decision trees from the [%rpart] package to create our own custom random forest.
 
 First, we create a weighted toy task.
 ```{r}
@@ -46,7 +46,7 @@ Let's have a look at the available hyperparameters of the fused learner:
 ```{r}
 getParamSet(wrapped.lrn)
 ```
-We choose to tune the parameters `minsplit` and `bw.feats` for the [mmce](&measures) using a [random search](&makeTuneControlRandom) in a 3-fold CV:
+We choose to tune the parameters `minsplit` and `bw.feats` for the [mmce](&measures) using a [random search](&TuneControl) in a 3-fold CV:
 ```{r}
 ctrl = makeTuneControlRandom(maxit = 10)
 rdesc = makeResampleDesc("CV", iters = 3)
@@ -63,7 +63,7 @@ Calling the train method of the newly constructed learner performs the following
 1. The tuning wrapper sets parameters for the underlying model in slot `$next.learner` and calls its train method.
 2. Next learner is the bagging wrapper. The passed down argument `bw.feats` is used in the bagging wrapper training function, the argument `minsplit` gets passed down to `$next.learner`.
    The base wrapper function calls the base learner `bw.iters` times and stores the resulting models.
-3. The bagged models are evaluated using the mean `mmce` (default aggregation for this performance measure) and new parameters are selected using the tuning method.
+3. The bagged models are evaluated using the mean [mmce](&measures) (default aggregation for this performance measure) and new parameters are selected using the tuning method.
 4. This is repeated until the tuner terminates. Output is a tuned bagged learner.
 
 ```{r}
