--- a/tutorial/src/benchmark_experiments.Rmd
+++ b/tutorial/src/benchmark_experiments.Rmd
@@ -38,13 +38,13 @@ Let's have a look at the benchmark result from the example above:
 
 ```{r}
 ## Individual performances of the 5 cross-validation runs
-getPerformances(res)
+getBMRPerformances(res)
 
 ## Aggregated performances
-getAggrPerformances(res)
+getBMRAggrPerformances(res)
 
 ## Predictions
-pred = getPredictions(res)
+pred = getBMRPredictions(res)
 names(pred)
 head(pred$`iris-example`)
 ```
@@ -55,7 +55,7 @@ Note that the task IDs are used to name the elements of ``pred``.
 
 In order to get an unbiased estimate of the performance on new data,
 it is generally not enough to simply use repeated cross-validation
-for a given set of hyperparameters and methods (see the section on [tuning](tune.md)),
+for a given set of hyperparameters and methods (see the section about [tuning](tune.md)),
 as this might produce an overly optimistic result.
 
 A better (although more time-consuming) approach is to nest two
@@ -86,7 +86,7 @@ Now we have a [Learner](&makeLearner) with hyperparameters and we want to find t
 that case we have two resampling levels.
 
 We show an example with outer bootstrap and inner cross-validation,
-our [Learner](&makeLearner) will be k-nearest neighbour.
+our [Learner](&makeLearner) will be [k-nearest neighbour](&kknn::kknn).
 
 ```{r}
 ## Range of hyperparameter k
@@ -98,7 +98,7 @@ in.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune k-nearest neighbor
 lrn = makeTuneWrapper("classif.kknn", resampling = in.rdesc, par.set = ps, control = ctrl,
-    show.info = FALSE)
+  show.info = FALSE)
 
 ## Define "outer" bootstrap indices
 out.rdesc = makeResampleDesc("Bootstrap", iters = 5)
@@ -109,10 +109,10 @@ res = benchmark(lrn, iris.task, out.rdesc, measure = acc, show.info = FALSE)
 res
 
 ## What parameter setting achieved this performances?
-getTuneResult(res)
+getBMRTuneResults(res)
 
 ## What performances did we get in the single runs?
-getPerformances(res)
+getBMRPerformances(res)
 ```
 
 Of course everything works the same way if we change the resampling
@@ -129,7 +129,7 @@ tasks = list(iris.task, sonar.task)
 
 ## Very small grid for SVM hyperparameters
 ps = makeParamSet(makeDiscreteParam("C", 2^seq(-1,1)),
-    makeDiscreteParam("sigma", 2^seq(-1,1)))
+  makeDiscreteParam("sigma", 2^seq(-1,1)))
 ctrl = makeTuneControlGrid()
 
 ## Define "inner" cross-validation indices
@@ -137,7 +137,7 @@ in.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune a SVM
 lrn = makeTuneWrapper("classif.ksvm", resampling = in.rdesc, par.set = ps, control = ctrl,
-    show.info = FALSE)
+  show.info = FALSE)
 
 ## Three learners to be compared
 lrns = list(makeLearner("classif.lda"), makeLearner("classif.rpart"), lrn)
@@ -150,10 +150,10 @@ res = benchmark(lrns, tasks, out.rdesc, show.info = FALSE)
 res
 
 ## Performance values in individual runs
-getPerformances(res)
+getBMRPerformances(res)
 
 ## Tuned parameter for SVM
-getTuneResult(res)
+getBMRTuneResults(res)
 ```
 
 ### Example 3: One task, two learners, feature selection
@@ -170,7 +170,7 @@ in.rdesc = makeResampleDesc("CV", iter = 2)
 
 ## Feature selection with sequential forward search (sfs)
 lrn = makeFeatSelWrapper("classif.lda", resampling = in.rdesc, control = ctrl, 
-    show.info = FALSE)
+  show.info = FALSE)
 
 ## Let's compare two learners
 lrns = list(makeLearner("classif.rpart"), lrn)
@@ -183,8 +183,8 @@ res = benchmark(tasks = iris.task, learners = lrns, resampling = out.rdesc, show
 res
 
 ## Which features have been selected (in the outer resampling steps)?
-getFeatSelResult(res)
+getBMRFeatSelResults(res)
 
 ## Performances on individual test data sets
-getPerformances(res)
+getBMRPerformances(res)
 ```
